// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api Keys List Page gets row data correctly 1`] = `
Array [
  Array [
    <Link
      replace={false}
      to="/account/api-keys/edit/123id?subaccount=101"
    >
      Test Key 1
    </Link>,
    <ShortKeyCode
      shortKey="ab01"
    />,
  ],
  Array [
    <Link
      replace={false}
      to="/account/api-keys/edit/456id"
    >
      Test Key 2
    </Link>,
    <ShortKeyCode
      shortKey="fe98"
    />,
  ],
  Array [
    <Link
      replace={false}
      to="/account/api-keys/view/789id"
    >
      Other User Key
    </Link>,
    <ShortKeyCode
      shortKey="c00l"
    />,
  ],
]
`;

exports[`Api Keys List Page renders correctly 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Create an API key you can use to access our REST or SMTP API services.
      </p>,
      "image": [Function],
      "secondaryAction": Object {
        "content": "View our API Docs",
        "external": true,
        "to": "https://developers.sparkpost.com/api",
      },
      "show": false,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create API Key",
      "to": "/account/api-keys/create",
    }
  }
  title="API Keys"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "label",
          "width": "40%",
        },
        Object {
          "label": "Key",
        },
      ]
    }
    defaultSortColumn="label"
    defaultSortDirection="desc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "key",
          "name",
          "id",
        ],
        "itemToStringKeys": Array [
          "label",
          "short_key",
          "id",
        ],
        "keyMap": Object {
          "key": "short_key",
          "name": "label",
          "owner": "username",
        },
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "canCurrentUserEdit": true,
          "grants": Array [
            "metrics/view",
          ],
          "id": "123id",
          "label": "Test Key 1",
          "short_key": "ab01",
          "subaccount_id": 101,
        },
        Object {
          "canCurrentUserEdit": true,
          "grants": Array [
            "smtp/inject",
          ],
          "id": "456id",
          "label": "Test Key 2",
          "short_key": "fe98",
        },
        Object {
          "canCurrentUserEdit": false,
          "grants": Array [
            "metrics/view",
          ],
          "id": "789id",
          "label": "Other User Key",
          "short_key": "c00l",
          "username": "other_user",
        },
      ]
    }
  />
</Page>
`;

exports[`Api Keys List Page renders errors when present 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Create an API key you can use to access our REST or SMTP API services.
      </p>,
      "image": [Function],
      "secondaryAction": Object {
        "content": "View our API Docs",
        "external": true,
        "to": "https://developers.sparkpost.com/api",
      },
      "show": false,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create API Key",
      "to": "/account/api-keys/create",
    }
  }
  title="API Keys"
>
  <ApiErrorBanner
    errorDetails="Uh oh! It broke. "
    message="Sorry, we seem to have had some trouble loading your API keys."
    reload={[Function]}
  />
</Page>
`;

exports[`Api Keys List Page renders when there are no keys 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Create an API key you can use to access our REST or SMTP API services.
      </p>,
      "image": [Function],
      "secondaryAction": Object {
        "content": "View our API Docs",
        "external": true,
        "to": "https://developers.sparkpost.com/api",
      },
      "show": true,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create API Key",
      "to": "/account/api-keys/create",
    }
  }
  title="API Keys"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "label",
          "width": "40%",
        },
        Object {
          "label": "Key",
        },
      ]
    }
    defaultSortColumn="label"
    defaultSortDirection="desc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "key",
          "name",
          "id",
        ],
        "itemToStringKeys": Array [
          "label",
          "short_key",
          "id",
        ],
        "keyMap": Object {
          "key": "short_key",
          "name": "label",
          "owner": "username",
        },
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={Array []}
  />
</Page>
`;

exports[`Api Keys List Page should render correctly with subaccounts 1`] = `
Array [
  Object {
    "label": "Name",
    "sortKey": "label",
    "width": "40%",
  },
  Object {
    "label": "Key",
  },
  Object {
    "label": "Subaccount",
    "sortKey": "subaccount_id",
    "width": "20%",
  },
]
`;

exports[`Api Keys List Page should render correctly with subaccounts 2`] = `
Array [
  <Link
    replace={false}
    to="/account/api-keys/edit/123id?subaccount=101"
  >
    Test Key 1
  </Link>,
  <ShortKeyCode
    shortKey="ab01"
  />,
  <SubaccountTag
    all={false}
    id={101}
    isDefault={false}
    master={false}
    receiveAll={false}
  />,
]
`;

exports[`Api Keys List Page should show api key banner on successful create 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Create an API key you can use to access our REST or SMTP API services.
      </p>,
      "image": [Function],
      "secondaryAction": Object {
        "content": "View our API Docs",
        "external": true,
        "to": "https://developers.sparkpost.com/api",
      },
      "show": false,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create API Key",
      "to": "/account/api-keys/create",
    }
  }
  title="API Keys"
>
  <Connect(ApiKeySuccessBanner)
    title="New API Key"
  />
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "label",
          "width": "40%",
        },
        Object {
          "label": "Key",
        },
      ]
    }
    defaultSortColumn="label"
    defaultSortDirection="desc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "key",
          "name",
          "id",
        ],
        "itemToStringKeys": Array [
          "label",
          "short_key",
          "id",
        ],
        "keyMap": Object {
          "key": "short_key",
          "name": "label",
          "owner": "username",
        },
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "canCurrentUserEdit": true,
          "grants": Array [
            "metrics/view",
          ],
          "id": "123id",
          "label": "Test Key 1",
          "short_key": "ab01",
          "subaccount_id": 101,
        },
        Object {
          "canCurrentUserEdit": true,
          "grants": Array [
            "smtp/inject",
          ],
          "id": "456id",
          "label": "Test Key 2",
          "short_key": "fe98",
        },
        Object {
          "canCurrentUserEdit": false,
          "grants": Array [
            "metrics/view",
          ],
          "id": "789id",
          "label": "Other User Key",
          "short_key": "c00l",
          "username": "other_user",
        },
      ]
    }
  />
</Page>
`;

exports[`Api Keys List Page should show loading component during load 1`] = `<Loading />`;
